--- a/stats.html
+++ b/stats.html
@@ -4,6 +4,7 @@
 	<title>Stats exampple</title>
 </head>
 <body>
+	<a href="send.html">Ссылка на send.html</a>
 	<script src="stats.js"></script>
 </body>
 </html>
